Fix CSS flexbox alignment issues

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,15 +8,21 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: baseline;
 }
 
 #header h1 {
-    font-size: inherit;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 0px;
+    margin: 0px;
+    line-height: normal;
 }
 
 #header ul {
     display: flex;
     flex-direction: row;
+    align-items: baseline;
     list-style-type: none;
 }
 
